--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^7.8.1",
     "recharts": "^2.8.0",
+    "sent": "^2.1.3",
     "socket.io-client": "^4.7.2",
     "tailwind-merge": "^1.14.0",
     "video-react": "^0.16.0"
