--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.441.0",
+    "mysql2": "^3.14.3",
     "next": "^14.2.31",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
