--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,14 @@
-# API Configuration
-NEXT_PUBLIC_API_URL=http://localhost:3001/api
-NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_API_URL=http://51.77.195.224:3001/api
+NEXT_PUBLIC_APP_URL=http://51.77.195.224:3000
+HOST=0.0.0.0
+PORT=3000
 
 # App Configuration
 NEXT_PUBLIC_APP_NAME=Chrono-Carto
 NEXT_PUBLIC_APP_DESCRIPTION=Plateforme pédagogique Histoire-Géographie
 
 # Security
-NEXTAUTH_SECRET=your-secret-key-here
+NEXTAUTH_SECRET=cJjoAoNP9MaszurjZAT1NDLUSyBqClss
 NEXTAUTH_URL=http://localhost:3000
 
 # Email Configuration (for production)
@@ -22,4 +23,3 @@ DATABASE_URL=mysql://user:password@localhost:3306/chrono_carto
 # File Upload
 MAX_FILE_SIZE=10485760
 UPLOAD_DIR=./uploads
-BACKEND_URL=http://localhost:3001
