--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "dev:network": "next dev --hostname 0.0.0.0",
+    "start:ubuntu": "next start --hostname 0.0.0.0",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
